# bi-hackathon-group-1

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROJECT_OVERVIEW.md  README.md  _gen_report_doc.py  docker-compose.yml  main.py  progress-report.docx  progress-report.html  pyproject.toml  railway.toml  render.yaml  report.html  requirements.txt  test_hash.py
.claude/: settings.local.json
.envs/: .env.example
.github/agents/: radar-dev.agent.md  radar-pm.agent.md
.github/workflows/: daily-data-refresh.yml
config/: settings.py
data/: Inflasi Bulanan (M-to-M), 2026.csv  auth.db  bmkg_weather.db  stok.db
docs/: ARCHITECTURE_FOLDER_STRUCTURE.md  DEPLOYMENT.md  INFRA_FREE_DEPLOYMENT.md  NEED_TO_FIX.md  PROJECT_BREAKDOWN.md  PROPOSAL.md  RADAR_Pangan_Business_Model_Canvas.md  RADAR_Pangan_PRD_MVP.md  README.md  REVAMP_GAP_ANALYSIS.md  demo-scenarios.md  ml-training-2026-04-26.md  session-log-2026-04-26.md  session-log-2026-05-06-architecture.md  session-log-2026-05-09-scope-revision.md  session-log-2026-05-10.md  session_2026-05-06.md
docs/erd/: ERD.md
docs/frd/: FRD.md
docs/knowledge-base/: 01_HET_REFERENCE.md  (+4 more)
docs/prd/: PRD.md
etl/: .dockerignore  .env.example  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml
etl/config/: constants.py  log_config.py  settings.py
etl/dags/: dag_data_ready_dashboard.py  dag_data_ready_modelling.py
etl/dbt_project/: dbt_project.yml  profiles.yml
etl/dbt_project/macros/: generate_schema_name.sql
etl/dbt_project/models/app/: dashboard_harga_pangan.sql
etl/dbt_project/models/marts/: schema.yml
etl/dbt_project/models/marts/dashboard/: mart_dashboard_harga_pangan.sql  mart_dashboard_ringkasan_nasional.sql
etl/dbt_project/models/marts/modelling/: mart_modelling_harga_pangan.sql
etl/dbt_project/models/staging/: sources.yml  stg_dim_komoditas.sql  stg_dim_kota.sql  stg_dim_pasar_tipe.sql  stg_dim_provinsi.sql  stg_dim_tanggal.sql  stg_fact_harga_pangan.sql  stg_harga_pangan.sql
etl/extractors/: __init__.py  bmkg_extractor.py  http_client.py  models.py  openmeteo_extractor.py  pihps_extractor.py  playwright_scraper.py
etl/kestra/: Dockerfile
etl/kestra/flows/: radar_pangan_daily.yml  radar_pangan_full_pipeline.yml
etl/loaders/: duckdb_loader.py  postgres_loader.py
etl/scripts/: check_db.py  check_pihps_health.py  cleanup_supabase_schemas.py  discover_endpoints.py  fetch_bmkg_forecast.py  generate_keys.py  load_historical.py  load_weather_historical.py  migrate_to_bigquery.py  migrate_users_boolean_flags.py  run_local_pipeline.py  run_transforms.py  seed_hari_besar.py  seed_ml_reference_data.py  sync_gold_to_postgres.py  sync_inflasi_bulanan_to_supabase.py  sync_musim_panen_to_supabase.py
frontend/: _redirects  admin.html  config.js  debug.html  guide.html  index.html  login.html  prediksi.html  rca.html
infra/: .gitignore  bigquery.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
migrations/: 001_create_decision_review.sql
ml/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  _test_analyze.py  railway.toml  requirements.txt  retrain.py  server.py
tests/: conftest.py  test_bowtie_engine.py  test_database_config.py  test_decision_contract.py  test_error_handling.py  test_guardrails.py  test_het_monitor.py  test_integration_auth.py  test_integration_mvp.py  test_mvp_api.py  test_mvp_bundles.py  test_mvp_export.py  test_mvp_search.py  test_rate_limit.py  test_rca_engine.py  test_schemas.py  test_weather_data.py
(+80 files in other folders)
