[project]
name = "radar-pangan"
version = "0.3.0"
description = "R.A.D.A.R Pangan - Platform Pemantauan Inflasi Pangan Indonesia"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic>=2.8.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]==3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart==0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
etl = [
    "pandas>=2.0.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "holidays>=0.50",
    "tenacity>=8.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "dbt-core>=1.11.8",
    "dbt-postgres>=1.10.0",
]
