[project]
name = "bi-pihps-pipeline"
version = "0.1.0"
description = "Data pipeline untuk penarikan data harga pangan dari BI PIHPS"
requires-python = ">=3.11"
dependencies = [
    # HTTP & scraping
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "playwright>=1.44.0",
    # Data processing
    "pandas>=2.2.0",
    "duckdb>=1.1.0",
    "pyarrow>=16.0.0",
    # dbt
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",
    # Airflow (installed separately in Dockerfile via constraints)
    # Utils
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "tenacity>=8.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
